<resources>
    <string name="app_name">Tap2Pay</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="old_password">Old Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Card Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvc">CVC</string>
    <string name="pin">PIN</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add_card">Add Card</string>
    <string name="cards">Cards</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="logout">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pay">Pay</string>
    <string name="submit">Submit</string>
    <string name="delete_profile">Delete Account</string>
</resources>
