<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.bogdi.bogdan.EditProfileActivity">

    <EditText
        android:id="@+id/etChangeEmail"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="150dp"
        android:drawableStart="@drawable/ic_mail_black_24dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etChangeFirstName"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etChangeLastName"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etChangePassword"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etChangeRepeatPassword"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/signup_button"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic" />

</LinearLayout>
