<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
    android:id="@+id/frameLayout"
    android:layout_marginTop="15dp"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

        <ImageView
            android:id="@+id/im_cardView"
            android:layout_height="255dp"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/cardbackground_sky"/>

        <ImageView
            android:id="@+id/im_cardChip"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/card_chip"/>

        <ImageView
            android:id="@+id/im_cardType"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="285dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/visa"/>

        <TextView
            android:id="@+id/tv_cardNumber"
            android:layout_width="280dp"
            android:layout_height="43dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:hint="@string/card_number"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorCard" />

        <TextView
            android:id="@+id/tv_cardExpDate"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="162dp"
            android:hint="@string/expiration_date"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorCard" />

        <TextView
            android:id="@+id/tv_cardName"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="195dp"
            android:hint="@string/card_name"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorCard" />
    </FrameLayout>

</LinearLayout>